<resources>
    <string name="app_name">SimpleImageGallery</string>
    <string name="folderName">Folder Name</string>
    <string name="appName">Simple Image Gallery</string>
    <string name="empty">No Images on this device</string>
    <string name="save">Save</string>
    <string name="reselect">Reselect</string>
    <string name="select_picture">Select picture</string>
    <string name="add_image">add image</string>
    <string name="select">select</string>
    <string name="error_read_json">Error reading json file</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="symbol_equals">=</string>
    <string name="symbol_dot">,</string>
    <string name="symbol_delete"><![CDATA[<-]]></string>
    <string name="symbol_plus">+</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_multiply">x</string>
    <string name="symbol_divide">/</string>
    <string name="open_bracket">(</string>
    <string name="cloe_bracket">)</string>
    <string name="symbol_bracket_open">(</string>
    <string name="symbol_bracket_close">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="ms">MS</string>
    <string name="mr">MR</string>
    <string name="mc">MC</string>
    <string name="m_plus">M+</string>
    <string name="m_minus">M-</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="user_exist">The user exist</string>
    <string name="empty_value">You don\'t enter value</string>
    <string name="sign_in">sign in</string>
    <string name="back">back</string>
    <string name="failed_auth">Login or password is invalid</string>
    <string name="sign_out">sign out</string>
    <string name="cancel">cancel</string>
    <string name="error">Error</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="title_is_enpty">title is empty</string>
    <string name="description_is_enpty">description is empty</string>
    <string name="image_is_empty">Picture is not selected</string>
    <string name="create_new_post">Create new post</string>
    <string name="post_created">Post created!</string>
    <string name="saving_error">saving error</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="error_loading">error loading</string>
    <string name="post_edited">Post edited</string>
    <string name="save_post">Save post</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDFm9mTllf70rcO7DIFrp-RJ0ykN_-JX9c
    </string>
    <string name="event_place">Place of the event</string>
    <string name="delete_position">delete position</string>
</resources>
